--- a/src/styles/blocks/ui/kit/components/product-card.scss
+++ b/src/styles/blocks/ui/kit/components/product-card.scss
@@ -1,13 +1,27 @@
 .product-card {
     background-color: $bg-primary;
-    padding: 0.5rem;
     border-radius: 1.25rem;
     display: flex;
     flex-direction: column;
     gap: 1.75rem;
     width: 330px;
+    transition: all .3s;
+    &:hover{
+        padding: 0.5rem;
+        margin-bottom: -10rem;
+        transform: translateY(-7rem);
+        box-shadow: 0px 0px 9px 0px rgba(56, 56, 26, 0.2);
+        .product-card__buttons{
+            visibility:visible ;
+            max-height: 10rem;
+            opacity: 1;
+        }
+    }
     &__images {
         position: relative;
+        background-color:$bg-primary;
+        border-radius: 1rem;
+        overflow: hidden;
         &::before {
             content: '';
             display: block;
@@ -15,10 +29,97 @@
             padding-bottom: 100%;
         }
         img {
-            @include image_settings(cover);
+            @include image_settings(contain);
             position: absolute;
             top: 0;
             left: 0;
         }
+        .swiper{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     }
+    &__information {
+        padding: 0 1.75rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        &__price-block{
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            &__price{
+                @include button_1
+            }
+            &__cashback{
+                background-color: $bg-system-transparent-6;
+                padding: 0.25rem 0.5rem;
+                border-radius: 1000rem;
+                display: flex;
+                align-items: center;
+                gap: 0.25rem;
+                img {
+                    @include image_settings(contain);
+                    width:1.5rem;
+                    height: 1.5rem;
+                }
+                span {
+                    @include text_3;
+                }
+            }
+            &__old-price-block{
+                display: flex;
+                align-items: center;
+                gap: 0.5rem;
+                &__price{
+                    @include text_3;
+                    color: $text-primary-transparent-60
+                }
+                &__sale{
+                    @include text_3;
+                    color: $text-subaccent;
+                }
+            }
+        }
+        &__name{
+            @include text_2;
+            color: $text-primary-transparent-60;
+        }
+        &__add{
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+            &__img-name{
+               display: flex;
+               gap: 0.5rem;
+               align-items: center;
+               img{
+                @include image_settings(contain);
+                width: 1.5rem;
+                height: 1.5rem;
+               }
+               span{
+                @include text_3;
+                color: $text-primary-transparent-60;
+               }
+            }
+        }
+
+    }
+    &__buttons{
+        display: flex;
+        gap: 0 1.75rem;
+        visibility: hidden;
+        max-height: 0;
+        overflow: 0;
+        opacity: 0;
+        transition: all .3s;
+        .buy{
+            flex: 1;
+        }
+    }
+
 }
