--- a/src/styles/blocks/ui/kit/components/product-card.scss
+++ b/src/styles/blocks/ui/kit/components/product-card.scss
@@ -4,22 +4,22 @@
     display: flex;
     flex-direction: column;
     gap: 1.75rem;
-    width: 330px;
     transition: all .3s;
+    height: fit-content;
     &:hover{
         padding: 0.5rem;
         margin-bottom: -10rem;
-        transform: translateY(-7rem);
+        transform: translateY(-2rem);
         box-shadow: 0px 0px 9px 0px rgba(56, 56, 26, 0.2);
         .product-card__buttons{
-            visibility:visible ;
+            visibility: visible;
             max-height: 10rem;
             opacity: 1;
         }
     }
     &__images {
         position: relative;
-        background-color:$bg-primary;
+        background-color: $bg-inverse-transparent-3;
         border-radius: 1rem;
         overflow: hidden;
         &::before {
@@ -34,7 +34,7 @@
             top: 0;
             left: 0;
         }
-        .swiper{
+        .swiper {
             position: absolute;
             top: 0;
             left: 0;
@@ -44,39 +44,39 @@
     }
     &__information {
         padding: 0 1.75rem;
-        display: flex;
         flex-direction: column;
+        display: flex;
         gap: 1rem;
-        &__price-block{
+        &__price-block {
             display: flex;
-            align-items: center;
             gap: 1rem;
+            align-items: center;
             &__price{
-                @include button_1
+                @include button_1;
             }
-            &__cashback{
-                background-color: $bg-system-transparent-6;
-                padding: 0.25rem 0.5rem;
-                border-radius: 1000rem;
+            &__cashback {
                 display: flex;
                 align-items: center;
                 gap: 0.25rem;
+                background-color: $bg-system-transparent-6;
+                padding: 0.25rem 0.5rem;
+                border-radius: 1000rem;
                 img {
                     @include image_settings(contain);
-                    width:1.5rem;
+                    width: 1.5rem;
                     height: 1.5rem;
                 }
                 span {
                     @include text_3;
                 }
             }
-            &__old-price-block{
+            &__old-price-block {
                 display: flex;
                 align-items: center;
                 gap: 0.5rem;
                 &__price{
                     @include text_3;
-                    color: $text-primary-transparent-60
+                    color: $text-primary-transparent-60;
                 }
                 &__sale{
                     @include text_3;
@@ -90,36 +90,35 @@
         }
         &__add{
             display: flex;
-            gap: 1rem;
             align-items: center;
+            gap: 1rem;
             &__img-name{
-               display: flex;
-               gap: 0.5rem;
-               align-items: center;
-               img{
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            img{
                 @include image_settings(contain);
                 width: 1.5rem;
                 height: 1.5rem;
-               }
-               span{
+            }
+            span{
                 @include text_3;
                 color: $text-primary-transparent-60;
-               }
+            }
             }
         }
-
     }
-    &__buttons{
+    &__buttons {
         display: flex;
-        gap: 0 1.75rem;
+        gap: 1rem;
+        padding: 0 1.75rem;
         visibility: hidden;
-        max-height: 0;
-        overflow: 0;
+        max-height: 0; 
+        overflow: hidden;
         opacity: 0;
-        transition: all .3s;
+        transition: all .3s ;
         .buy{
             flex: 1;
         }
     }
-
 }
