--- a/src/styles/blocks/ui/kit/elements/input.scss
+++ b/src/styles/blocks/ui/kit/elements/input.scss
@@ -18,7 +18,8 @@
                 color: $text-primary-transparent-15;
             }
         }
-        &_search {
+        &_search,
+        &_button {
             border: 0.125rem solid $border-accent;
             display: flex;
             align-items: center;
@@ -47,6 +48,12 @@
             &:disabled {
                 border-color: $border-primary-transparent-3;
                 color: $text-primary-transparent-15;
+            }
+        }
+        &_button{
+            padding: 0.75rem;
+            &::after{
+                display: none;
             }
         }
     }
