--- a/templates/index.html
+++ b/templates/index.html
@@ -613,10 +613,133 @@
                 </div>
             </div>
         </section>
-
+        <section class="pv-60">
+            <div class="brands-section">
+                <div class="brands-section_container container">
+                    <div class="brands-section__slider">
+                        <div class="swiper brandsSlider">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="../src/images/brands/brand1.png" alt=""></div>
+                                <div class="swiper-slide"><img src="../src/images/brands/brand2.png" alt=""></div>
+                                <div class="swiper-slide"><img src="../src/images/brands/brand3.png" alt=""></div>
+                                <div class="swiper-slide"><img src="../src/images/brands/brand4.png" alt=""></div>
+                                <div class="swiper-slide"><img src="../src/images/brands/brand5.png" alt=""></div>
+                                <div class="swiper-slide"><img src="../src/images/brands/brand5.png" alt=""></div>
+                            </div>
+                        </div>
+                        <button class="button button_size_icon button_style_outline prev"><img src="../src/images/a-left.svg" alt=""></button>
+                        <button class="button button_size_icon button_style_outline next"><img src="../src/images/a-right.svg" alt=""></button>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </section>
    </main>
 
-   <footer></footer>
+   <footer>
+    <div class="footer-section">
+        <div class="footer-section_container container">
+            <div class="footer-section__infoblock__mailing-social">
+                <div class="footer-section__infoblock__mailing-social__mailing">
+                    <div class="footer-section__infoblock__mailing-social__mailing__head">
+                        <div class="footer-section__infoblock__mailing-social__mailing__head__title">Подпишись на рассылку</div>
+                        <div class="footer-section__infoblock__mailing-social__mailing__head__description">И узнавай первым о новых скидках и акциях.</div>
+                    </div>
+                    <div class="footer-section__infoblock__mailing-social__mailing__body">
+                        <div class="input input_type_button input_state_static">
+                            <input type="text">
+                            <button class="button button_size_icon-small button_style_ghost-subdued">
+                                 <img src="../src/images/a-right.svg" alt="">
+                            </button>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="footer-section__infoblock__mailing-social__social">
+                    <div class="app">
+                        <div class="app_qr"><img src="/src/images/qr.svg" alt=""></div>
+                        <div class="app__information">
+                            <div class="app__information__titel">Скачивай наше приложение</div>
+                            <div class="app__information__description">И используй бонусную программу по полной!</div>
+                        </div>
+                    </div>
+                    <div class="footer-section__infoblock__mailing-social__social__links">
+                        <a href="" class="button button_size_icon-small button_style_gray">
+                            <img src="../src/images/socials/vk.png" alt="">
+                        </a>
+                        <a href="" class="button button_size_icon-small button_style_gray">
+                             <img src="../src/images/socials/tg.png" alt="">
+                        </a>
+                        <a href="" class="button button_size_icon-small button_style_gray">
+                            <img src="../src/images/socials/ok.png" alt="">
+                       </a>
+                    </div>
+                 </div>
+                </div>
+            </div>
+            <div class="footer-section__infoblock__menu">
+                <div class="footer-section__infoblock__menu__item">
+                    <div class="footer-section__infoblock__menu__item__title"></div>
+                    <ul>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section__infoblock__menu__item">
+                    <div class="footer-section__infoblock__menu__item__title"></div>
+                    <ul>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section__infoblock__menu__item">
+                    <div class="footer-section__infoblock__menu__item__title"></div>
+                    <ul>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section__infoblock__menu__item">
+                    <div class="footer-section__infoblock__menu__item__title"></div>
+                    <ul>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section__infoblock__menu__item">
+                    <div class="footer-section__infoblock__menu__item__title"></div>
+                    <ul>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Каталог</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-section__infoblock__other">
+                <div class="footer-section__infoblock__other__links"></div>
+                <a href="" class="footer-section__infoblock__other__links__link">dkdldldldl</a>
+                <a href="" class="footer-section__infoblock__other__links__link">dkldldldl</a>
+            </div>
+            <div class="footer-section__infoblock__other__description">
+                <span> <a href="">dlodldldldldl</a></span>
+                <span>flflflflflfl</span>
+            </div>
+        </div>
+    </div>
+   </footer>
  
    
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
