fix swiper and images

--- a/src/styles/blocks/sections/header.scss
+++ b/src/styles/blocks/sections/header.scss
@@ -1,7 +1,4 @@
 .header-section{
-    &__container{
-        margin: 0 8.25rem;
-    }
     &__info-block{
         grid-column: span 5;
         display: flex;
@@ -61,6 +58,9 @@
                         @include image_settings(contain)
                     }
                 }
+            }
+            &.main{
+                
             }
             &:nth-child(2){
                 border-radius: 0 0 1.75rem 1.75rem;
