--- a/src/styles/blocks/sections/_main.scss
+++ b/src/styles/blocks/sections/_main.scss
@@ -2,3 +2,7 @@
 @import "./advantages.scss";
 @import "./new-product.scss";
 @import "./products-home.scss";
+@import "./products-home.scss";
+@import "./banner.scss";
+@import "./brands.scss";
+@import "./footer.scss";
