--- a/src/styles/blocks/sections/advantages.scss
+++ b/src/styles/blocks/sections/advantages.scss
@@ -1,45 +1,87 @@
-.advantages-section{
-    &__info-block{
-        grid-column: span 5;
+.advantages-section {
+  &__info-block {
+    grid-column: span 5;
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+
+    &__bann {
+      position: relative;
+
+      .swiper {
+        .swiper-wrapper {
+          .swiper-slide {
+            border-radius: 2.5rem;
+            overflow: hidden;
+
+            img {
+              @include image_settings(cover);
+            }
+          }
+        }
+      }
+
+      .button {
+        &.prev, &.next {
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          z-index: 1;
+          cursor: pointer;
+          width: 4.5rem;
+          height: 4.5rem;
+
+          &.swiper-button-disabled {
+            opacity: 0.5;
+          }
+        }
+
+        &.prev {
+          left: -2.25rem;
+        }
+
+        &.next {
+          right: -2.25rem;
+        }
+      }
+    }
+
+    &__additional {
+      grid-column: span 5;
+      display: grid;
+      grid-template-columns: repeat(5, minmax(0, 1fr));
+      gap: 1.75rem;
+
+
+      &__wrapper {
         display: flex;
         flex-direction: column;
-        gap: 2.5rem;
-        &__bann{
-            position: relative;
-            .swiper{
-                .swiper-wrapper{
-                    .swiper-slide{
-                        border-radius: 2.5rem;
-                        overflow: hidden;
-                        img{
-                            @include image_settings(cover);
-                        }
-                    }
-                }
-            }
-            .button {
-                &.prev, &.next {
-                    position: absolute;
-                    top: 50%;
-                    transform: translateY(-50%);
-                    z-index: 1;
-                    cursor: pointer;
-                    width: 4.5rem;
-                    height: 4.5rem;
-                    &.swiper-button-disabled{
-                        opacity: 0.5;
-                    }
-                }
-                &.prev{
-                    left: -2.25rem;
-                }
-                &.next{
-                    right: -2.25rem;
-                }
-            }
-        }
-        &__additional{
-            @include grid(5, 1.75rem);
-        }
+        position: relative;
+        background: white;
+        min-width: 26.58rem;
+        height: 15.5rem;
+        padding: 1.75rem;
+        border-radius: 1rem;
+        gap: 1rem;
+      }
+
+      &__head {
+        font-size: 1.75rem;
+      }
+
+      &__description {
+        font-size: 1.25rem;
+        width: 15rem;
+        color: $text-primary-transparent-60;
+      }
+
+      img {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        width: 12rem;
+        height: 12rem;
+      }
     }
+  }
 }
