--- a/src/styles/blocks/sections/footer.scss
+++ b/src/styles/blocks/sections/footer.scss
@@ -1,125 +1,3 @@
-.footer-section{
-    &__container{
-        margin: 0 8.25rem;
-    }
-    &__info-block{
-        background-color: $bg-primary;
-        border-radius: 1.5rem 0 0;
-        padding: 5rem;
-        grid-column: span 5 ;
-        display: grid;
-        @include grid(9, 1.25rem);
-        &_mailing-social{
-            display: flex;
-            flex-direction: column;
-            gap: 5rem;
-            grid-column: span 5 ;
-            grid-row:  span 2;
-            &__mailing{
-                display: flex;
-                flex-direction: column;
-                gap: 2.5rem;
-                &__head{
-                    display: flex;
-                    flex-direction: column;
-                    gap: 1rem;
-                    &__titel{
-                        @include heading_3;
-                    }
-                    &__description{
-                        @include text_2;
-                        color:$text-primary-transparent-60;
-                    }
-                }
-            }
-            &__social{
-                display: flex;
-                flex-direction: column;
-                gap: 2.5rem;
-                .app{
-                    display: flex;
-                    gap: 2.5rem;
-                    border-radius:1rem ;
-                    border: 0.125rem solid $border-primary-transparent-15;
-                    &__qr{
-                        width: 10rem;
-                        height: 10rem;
-                        img{
-                            @include image_settings(contain)
-                        }
-                    }
-                    &__information{
-                        display: flex;
-                        flex-direction: column;
-                        gap: 0.5rem;
-                        &__title{
-                            @include button_1;
-                        }
-                        &__description{
-                            @include text_3;
-                            color: $text-primary-transparent-30;
-                        }
-                    }
-                }
-                &__links{
-                    display: flex;
-                    flex-wrap: wrap;
-                    gap: 1.5rem;
-                }
-            }
-        }
-        &_menu{
-            grid-column: 5/10;
-            @include grid (5,5rem);
-            &__item{
-                display: flex;
-                flex-direction: column;
-                gap: 1.25rem;
-                &__title{
-                    @include button_2
-                }
-                ul{
-                    margin: 0;
-                    padding: 0;
-                    list-style: none;
-                    display: flex;
-                    flex-direction: column;
-                    gap: 1.25rem;
-                    li{
-                        @include text_2;
-                        color: $text-primary-transparent-60;
-                        a{
-                            color: $text-primary-transparent-60;
-                        }
-                        
-                    }
-                }
-            }
-        }
-        &__other{
-            grid-column: 5/10;
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-end;
-        }
-        &__links{
-            @include text_3;
-            display: flex;
-            gap: 1.5rem;
-            color: $text-primary-transparent-60;
-            a{
-                color: $text-primary-transparent-60;
-            }
-        }
-        &__description{
-            text-align: right;
-            display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
-            color: $text-primary-transparent-30;
-            a{
-                color: $text-primary-transparent-30;
-            }
-        }
-    }
+footer-section{
+  
 }
