--- a/src/styles/blocks/sections/products-home.scss
+++ b/src/styles/blocks/sections/products-home.scss
@@ -1,6 +1,8 @@
 .products-home-section{
     &__info-block{
         grid-column: span 5;
-        @include grid(5, 1.75rem);
+        display: grid;
+        grid-template-columns: repeat(5, minmax(0, 1fr));
+        gap: 1.75rem;
     }
 }
