--- a/src/styles/blocks/ui/kit/elements/input.scss
+++ b/src/styles/blocks/ui/kit/elements/input.scss
@@ -18,8 +18,7 @@
                 color: $text-primary-transparent-15;
             }
         }
-        &_search,
-        &_button {
+        &_search {
             border: 0.125rem solid $border-accent;
             display: flex;
             align-items: center;
@@ -48,12 +47,6 @@
             &:disabled {
                 border-color: $border-primary-transparent-3;
                 color: $text-primary-transparent-15;
-            }
-        }
-        &_button{
-            padding: 0.75rem;
-            &::after{
-                display: none;
             }
         }
     }
