--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29,17 +29,6 @@ body {
   background-color: rgba(56, 56, 56, 0.031372549);
 }
 
-header, footer, main {
-  max-width: 1921px;
-  margin: 0 auto;
-}
-@media (max-width: 1920px) {
-  header, footer, main {
-    margin: 0;
-    max-width: none;
-  }
-}
-
 hr {
   margin: 0;
 }
@@ -361,19 +350,6 @@ input {
   width: 2.5rem;
   height: 2.5rem;
 }
-.button_size_icon-small {
-  padding: 0.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.button_size_icon-small img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  width: 2rem;
-  height: 2rem;
-}
 .button_style_accent {
   background-color: #FFE600;
 }
@@ -427,34 +403,6 @@ input {
 .button_style_ghost:disabled {
   background-color: rgba(56, 56, 56, 0.031372549);
   color: rgba(56, 56, 56, 0.1490196078);
-}
-.button_style_ghost-subdued {
-  background: none;
-}
-.button_style_ghost-subdued::hover {
-  background-color: rgba(56, 56, 56, 0.0588235294);
-}
-.button_style_ghost-subdued::active {
-  background-color: #FFE600;
-}
-.button_style_ghost-subdued:disabled {
-  background-color: rgba(56, 56, 56, 0.0588235294);
-}
-.button_style_ghost-subdued:disabled img {
-  filter: grayscale(1);
-  opacity: 0.15;
-}
-.button_style_ghost_gray {
-  background-color: rgba(56, 56, 56, 0.0588235294);
-}
-.button_style_ghost_gray:hover {
-  background-color: #FFE600;
-}
-.button_style_ghost_gray:active {
-  background-color: #383838;
-}
-.button_style_ghost_gray:active img {
-  filter: invert(1);
 }
 
 .checkbox-block {
@@ -567,15 +515,15 @@ input {
   border-color: rgba(56, 56, 56, 0.031372549);
   color: rgba(56, 56, 56, 0.1490196078);
 }
-.input_type_search, .input_type_button {
+.input_type_search {
   border: 0.125rem solid #FFE600;
   display: flex;
   align-items: center;
 }
-.input_type_search input, .input_type_button input {
+.input_type_search input {
   width: 100%;
 }
-.input_type_search::after, .input_type_button::after {
+.input_type_search::after {
   content: "";
   width: 2rem;
   height: 2rem;
@@ -585,24 +533,18 @@ input {
   background-size: contain;
   opacity: 0.6;
 }
-.input_type_search:hover, .input_type_button:hover {
+.input_type_search:hover {
   border-color: #E1CC08;
 }
-.input_type_search:focus, .input_type_button:focus {
+.input_type_search:focus {
   border-color: #FFE600;
 }
-.input_type_search:focus::after, .input_type_button:focus::after {
+.input_type_search:focus::after {
   opacity: 1;
 }
-.input_type_search:disabled, .input_type_button:disabled {
+.input_type_search:disabled {
   border-color: rgba(56, 56, 56, 0.031372549);
   color: rgba(56, 56, 56, 0.1490196078);
-}
-.input_type_button {
-  padding: 0.75rem;
-}
-.input_type_button::after {
-  display: none;
 }
 .input_state_wrong {
   border: 0.125rem solid #ED1C24;
@@ -749,9 +691,36 @@ input::placeholder {
   right: -2.25rem;
 }
 .advantages-section__info-block__additional {
+  grid-column: span 5;
   display: grid;
   grid-template-columns: repeat(5, minmax(0, 1fr));
   gap: 1.75rem;
+}
+.advantages-section__info-block__additional__wrapper {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  background: white;
+  min-width: 26.58rem;
+  height: 15.5rem;
+  padding: 1.75rem;
+  border-radius: 1rem;
+  gap: 1rem;
+}
+.advantages-section__info-block__additional__head {
+  font-size: 1.75rem;
+}
+.advantages-section__info-block__additional__description {
+  font-size: 1.25rem;
+  width: 15rem;
+  color: rgba(56, 56, 56, 0.6);
+}
+.advantages-section__info-block__additional img {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 12rem;
+  height: 12rem;
 }
 
 .new-product-section__head {
@@ -795,6 +764,270 @@ input::placeholder {
   display: grid;
   grid-template-columns: repeat(5, minmax(0, 1fr));
   gap: 1.75rem;
+}
+
+.products-home-section__info-block {
+  grid-column: span 5;
+  display: grid;
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+  gap: 1.75rem;
+}
+
+.banner__wrapper {
+  margin: 0 10rem;
+  background: url("../images/Promo_Loyality.png");
+  background-size: contain;
+  height: 19.75rem;
+  width: calc(100% - 20rem);
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10rem 0 10rem;
+  align-items: center;
+}
+.banner__text-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1.1rem;
+}
+.banner__text-first {
+  font-size: 3.5rem;
+}
+.banner__text-last {
+  font-size: 1.7rem;
+  max-width: 38.1rem;
+}
+.banner__button {
+  background: #FFFFFF;
+  border-radius: 1rem;
+  padding: 1.75rem 2.5rem;
+  border: 0;
+  cursor: pointer;
+  transition-duration: 0.5s;
+}
+.banner__button:hover {
+  opacity: 0.8;
+}
+
+.brands-section {
+  position: relative;
+}
+.brands-section__slider {
+  grid-column: 2/5;
+  position: relative;
+}
+.brands-section__slider .swiper .swiper-wrapper .swiper-slide {
+  color: #FFFFFF;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+.brands-section__slider .swiper .swiper-wrapper .swiper-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.button.prev, .button.next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  cursor: pointer;
+  width: 4.5rem;
+  height: 4.5rem;
+}
+.button.prev.swiper-button-disabled, .button.next.swiper-button-disabled {
+  opacity: 0.5;
+}
+.button.prev {
+  left: -2.25rem;
+}
+.button.next {
+  right: -2.25rem;
+}
+
+footer-section__container {
+  margin: 0 8.25rem;
+}
+footer-section__info-block {
+  background-color: #FFFFFF;
+  border-radius: 1.5rem 0 0;
+  padding: 5rem;
+  grid-column: span 5;
+  display: grid;
+  display: grid;
+  grid-template-columns: repeat(9, minmax(0, 1fr));
+  gap: 1.25rem;
+}
+footer-section__info-block_mailing-social {
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+  grid-column: span 5;
+  grid-row: span 2;
+}
+footer-section__info-block_mailing-social__mailing {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+}
+footer-section__info-block_mailing-social__mailing__head {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+footer-section__info-block_mailing-social__mailing__head__titel {
+  font-size: 2.5rem;
+  font-weight: 500;
+  line-height: 115%;
+  letter-spacing: -0.003em;
+}
+@media (max-width: 768px) {
+  footer-section__info-block_mailing-social__mailing__head__titel {
+    font-size: 2rem;
+  }
+}
+footer-section__info-block_mailing-social__mailing__head__description {
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 130%;
+  letter-spacing: -0.002em;
+  color: rgba(56, 56, 56, 0.6);
+}
+@media (max-width: 768px) {
+  footer-section__info-block_mailing-social__mailing__head__description {
+    font-size: 1.25rem;
+  }
+}
+footer-section__info-block_mailing-social__social {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+}
+footer-section__info-block_mailing-social__social .app {
+  display: flex;
+  gap: 2.5rem;
+  border-radius: 1rem;
+  border: 0.125rem solid rgba(56, 56, 56, 0.1490196078);
+}
+footer-section__info-block_mailing-social__social .app__qr {
+  width: 10rem;
+  height: 10rem;
+}
+footer-section__info-block_mailing-social__social .app__qr img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+footer-section__info-block_mailing-social__social .app__information {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+footer-section__info-block_mailing-social__social .app__information__title {
+  font-size: 1.75rem;
+  font-weight: 500;
+  line-height: 130%;
+  letter-spacing: -0.003em;
+}
+@media (max-width: 768px) {
+  footer-section__info-block_mailing-social__social .app__information__title {
+    font-size: 1.5rem;
+  }
+}
+footer-section__info-block_mailing-social__social .app__information__description {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 130%;
+  letter-spacing: -0.001em;
+  color: rgba(56, 56, 56, 0.3019607843);
+}
+@media (max-width: 768px) {
+  footer-section__info-block_mailing-social__social .app__information__description {
+    font-size: 1rem;
+  }
+}
+footer-section__info-block_mailing-social__social__links {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+footer-section__info-block_menu {
+  grid-column: 5/10;
+  display: grid;
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+  gap: 5rem;
+}
+footer-section__info-block_menu__item {
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+footer-section__info-block_menu__item__title {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 130%;
+  letter-spacing: -0.002em;
+}
+@media (max-width: 768px) {
+  footer-section__info-block_menu__item__title {
+    font-size: 1.25rem;
+  }
+}
+footer-section__info-block_menu__item ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+footer-section__info-block_menu__item ul li {
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 130%;
+  letter-spacing: -0.002em;
+  color: rgba(56, 56, 56, 0.6);
+}
+@media (max-width: 768px) {
+  footer-section__info-block_menu__item ul li {
+    font-size: 1.25rem;
+  }
+}
+footer-section__info-block_menu__item ul li a {
+  color: rgba(56, 56, 56, 0.6);
+}
+footer-section__info-block__other {
+  grid-column: 5/10;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+footer-section__info-block__links {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 130%;
+  letter-spacing: -0.001em;
+  display: flex;
+  gap: 1.5rem;
+  color: rgba(56, 56, 56, 0.6);
+}
+@media (max-width: 768px) {
+  footer-section__info-block__links {
+    font-size: 1rem;
+  }
+}
+footer-section__info-block__links a {
+  color: rgba(56, 56, 56, 0.6);
+}
+footer-section__info-block__description {
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  color: rgba(56, 56, 56, 0.3019607843);
+}
+footer-section__info-block__description a {
+  color: rgba(56, 56, 56, 0.3019607843);
 }
 
 /*# sourceMappingURL=main.css.map */
