--- a/src/styles/blocks/ui/kit/elements/input.scss
+++ b/src/styles/blocks/ui/kit/elements/input.scss
@@ -1,64 +1,78 @@
 .input {
-    background-color: $bg-primary;
-    font-size: 1.5rem;
-    color: $text-primary;
-    padding: 1.25rem;
-    border-radius: 1rem;
-    &_type {
-        &_text {
-            border: 0.125rem solid $border-primary-transparent-6;
-            &:hover {
-                border-color: $border-primary-transparent-15;
-            }
-            &:focus {
-                border-color: $border-accent;
-            }
-            &:disabled {
-                border-color: $border-primary-transparent-3;
-                color: $text-primary-transparent-15;
-            }
-        }
-        &_search {
-            border: 0.125rem solid $border-accent;
-            display: flex;
-            align-items: center;
-            input {
-                width: 100%;
-            }
-            &::after {
-                content: '';
-                width: 2rem;
-                height: 2rem;
-                display: block;
-                background-image: url('/src/images/search.svg');
-                background-repeat: no-repeat;
-                background-size: contain;
-                opacity: .6;
-            }
-            &:hover {
-                border-color: $border-accent-subdued-15;
-            }
-            &:focus {
-                border-color: $border-accent;
-                &::after {
-                    opacity: 1;
-                }
-            }
-            &:disabled {
-                border-color: $border-primary-transparent-3;
-                color: $text-primary-transparent-15;
-            }
-        }
+  background-color: $bg-primary;
+  font-size: 1.5rem;
+  color: $text-primary;
+  padding: 1.25rem;
+  border-radius: 1rem;
+  &_type {
+    &_text {
+      border: 0.125rem solid $border-primary-transparent-6;
+      &:hover {
+        border-color: $border-primary-transparent-15;
+      }
+      &:focus {
+        border-color: $border-accent;
+      }
+      &:disabled {
+        border-color: $border-primary-transparent-3;
+        color: $text-primary-transparent-15;
+      }
     }
-    &_state {
-        &_wrong {
-            border: 0.125rem solid $border-subaccent;
+    &_search {
+      border: 0.125rem solid $border-accent;
+      display: flex;
+      align-items: center;
+      input {
+        width: 100%;
+      }
+      &::after {
+        content: "";
+        width: 2rem;
+        height: 2rem;
+        display: block;
+        background-image: url("/src/images/search.svg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        opacity: 0.6;
+      }
+      &:hover {
+        border-color: $border-accent-subdued-15;
+      }
+      &:focus {
+        border-color: $border-accent;
+        &::after {
+          opacity: 1;
         }
+      }
+      &:disabled {
+        border-color: $border-primary-transparent-3;
+        color: $text-primary-transparent-15;
+      }
     }
+    &_button {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: space-between;
+      align-items: center;
+      border: 2px solid $bg-accent;
+      padding: 0.75rem;
+      max-width: 39.1667rem;
+      max-height: 4.5rem;
+      &::after {
+        display: none;
+      }
+    }
+  }
+  &_state {
+    &_wrong {
+      border: 0.125rem solid $border-subaccent;
+    }
+  }
 }
 
 input {
-    &::placeholder {
-        color: $text-primary-transparent-30;
-    }
+  &::placeholder {
+    color: $text-primary-transparent-30;
+  }
 }
